remove config store and api
